5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1885_2543.log
== TEST (2019-07-09 10:45:28) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

g = zeros(x,dtype == int)

for i in range(size(g)):
	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:46:28) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

g = zeros(x,dtype == int)

for i in range(size(g)):
	f = size(g)
	
	
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:46:54) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

g = zeros(x,dtype == int)

for i in range(size(x)):
	f = size(x)
	
	
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:47:07) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

#g = zeros(x,dtype == int)

for i in range(size(x)):
	f = size(x)
	
	
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:48:09) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f == 0):

	
	
print(f)
-- ERROR:
File "XXXX", line 11
    print(f)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:48:37) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f >= 0):

	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:26) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f >= 0):
	f = f -1
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:33) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f >= 0):
	f = f -1
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:46) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f >= 0):
	f = f -1
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:51:18) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	f = f -1
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:52:49) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
for i in range(size(x)):
while(f > 0):
	f = f -1
	p = x[i]

	
	
	
print(f)
print(p)
-- ERROR:
File "XXXX", line 7
    while(f > 0):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:53:24) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
	f = f -1
	p = x[i]

	
	
	
print(f)
print(p)
-- ERROR:
File "XXXX", line 9
    f = f -1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:53:31) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
for i in range(size(x)):
	f = f -1
	p = x[i]

	
	
	
print(f)
print(p)
-- ERROR:
File "XXXX", line 8
    for i in range(size(x)):
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:53:41) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
	f = f -1
	p = x[i]

	
	
	
print(f)
print(p)
-- ERROR:
File "XXXX", line 9
    f = f -1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 10:53:43) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
	f = f -1
	p = x[i]

	
	
	
print(f)
print(p)
-- EXECUTION TIME:
0.659516
-- ERROR:
  File "/home/codebench/codes/1885/2543/main.py", line 9
    f = f -1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:53:44) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
	f = f -1
	p = x[i]

	
	
	
print(f)
print(p)
-- ERROR:
File "XXXX", line 9
    f = f -1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:53:53) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]

	
	
	
print(f)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:54:09) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]

	
	
	
	print(f)
	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:54:23) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]

	
	
	
		print(f)
		print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:56:20) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = str(p"x^"f)
	
	
		print(f)
		print(p)
-- ERROR:
File "XXXX", line 11
    z = str(p"x^"f)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:56:34) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = (p"x^"f)
	
		print(z)
		print(f)
		print(p)
-- ERROR:
File "XXXX", line 11
    z = (p"x^"f)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:56:43) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = (p"x^"+ f)
	
		print(z)
		print(f)
		print(p)
-- ERROR:
File "XXXX", line 11
    z = (p"x^"+ f)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:52) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = p + "x^" + f
	
		print(z)
		print(f)
		print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:16:23) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = p + "x^" + str(f)
	
		print(z)
		print(f)
		print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:16:33) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = str(p) + "x^" + str(f)
	
		print(z)
		print(f)
		print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:16:57) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = str(p) + "x^" + str(f)
	
print(z)
		print(f)
		print(p)
-- ERROR:
File "XXXX", line 14
    print(f)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:17:04) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = str(p) + "x^" + str(f)
	
	print(z)
		print(f)
		print(p)
-- ERROR:
File "XXXX", line 14
    print(f)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:17:18) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = str(p) + "x^" + str(f)
	
		print(z)
		print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:17:27) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = str(p) + "x^" + str(f)
	
		print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:17:44) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = str(p) + "x^" + str(f)
	
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:18:22) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)

while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = str(p) + "x^" + str(f) + "+"
	
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:18:57) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = " "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = str(p) + "x^" + str(f) + "+" + z
	
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:19:36) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = " "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = str(p) + "x^" + str(f) + " + " + z
	
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:20:39) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = " "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + " + " 
	
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:21:21) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + " + " 
	
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:21:43) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + " + " 
	
print(z)
		
-- EXECUTION TIME:
1.04346
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
30x^2 + 20x^1 + 11x^0 +
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:
10x^0 +
-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:
11x^4 + 50x^3 + 20x^2 + 30x^1 + 2x^0 +
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:21:47) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + " + " 
	
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:22:33) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d
	
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:23:02) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d

r = z - d
print(r)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:23:16) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d

print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:25:32) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d
	
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:25:47) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d
	
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:26:57) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d
	d = z - str(d)
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:27:03) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d

print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:10) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d
		if str(f) == 0:
			z = z - d
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:19) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d
		if str(f) == 0:
			z = z - d
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:31:34) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d
		if str(f) == 0:
			z = z - d
print(z)
		
-- EXECUTION TIME:
1.08405
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
30x^2 + 20x^1 + 11x^0 +
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:
10x^0 +
-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:
11x^4 + 50x^3 + 20x^2 + 30x^1 + 2x^0 +
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:37) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d
		if str(f) == 0:
			z = z - d
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:38) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d
		if str(f) == 0:
			z = z - d
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:49:14) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 0):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d


print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:49:38) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 1):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d


print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:49:48) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
while(f > 2):
	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d


print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:49:59) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "

	for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d


print(z)
		
-- ERROR:
File "XXXX", line 9
    for i in range(size(x)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:50:03) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "

for i in range(size(x)):
		f = f -1
		p = x[i]
		z = z + str(p) + "x^" + str(f) + d


print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:50:15) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "

for i in range(size(x)):
	f = f -1
	p = x[i]
	z = z + str(p) + "x^" + str(f) + d


print(z)
		
-- EXECUTION TIME:
0.670011
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
nnn:30x^2 + 20x^1 + 11x^0 +
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:
nnn:10x^0 +
-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:
nnn:11x^4 + 50x^3 + 20x^2 + 30x^1 + 2x^0 +
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:51:13) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "

for i in range(size(x)):
	f = f -1
	p = x[i]
	z = z + str(p) + "x^" + str(f) + d


print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:52:21) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "

for i in range(size(x)):
	f = f -1
	p = x[i]
	z = z + str(p) + "x^" + str(f) + d
	if (str(f) == 0):
		z = z - p[-1] 

print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:52:30) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "

for i in range(size(x)):
	f = f -1
	p = x[i]
	z = z + str(p) + "x^" + str(f) + d
	if (str(f) == 0):
		z = z - p[-1] 

		print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:52:37) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "

for i in range(size(x)):
	f = f -1
	p = x[i]
	z = z + str(p) + "x^" + str(f) + d
	if (str(f) == 0):
		z = z - p[-1] 

	print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:53:03) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "

for i in range(size(x)):
	f = f -1
	p = x[i]
	z = z + str(p) + "x^" + str(f) + d
	if (str(f) == 0):
		z = z - p[-1] 
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:53:55) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
j = "1"
for i in range(size(x)):
	f = f -1
	p = x[i]
	z = z + str(p) + "x^" + str(f) + d
	if (str(f) == 0):
		z = z +j
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:54:17) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
j = "1"
for i in range(size(x)):
	f = f -1
	p = x[i]
	z = z + str(p) + "x^" + str(f) + d
	if f == 0:
		z = z +j
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:54:47) 
-- CODE:
from numpy import*

x = array(eval(input("nnn:")))

f = size(x)
z = ""
d = " + "
j = ""
for i in range(size(x)):
	f = f -1
	p = x[i]
	z = z + str(p) + "x^" + str(f) + d
	if f == 0:
		z = z + j 
print(z)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
